--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.9.2"
   },
   "scripts": {
-    "dev": "ts-node-dev --quiet --no-deprecation src/main.ts"
+    "dev": "ts-node-dev --quiet --no-deprecation src/main.ts",
+    "build": "tsc"
   }
 }
