--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "taxibronbot",
+  "version": "1.0.0",
+  "description": "Telegram taxi booking bot",
+  "main": "dist/main.js",
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "dotenv": "^16.3.1",
@@ -15,6 +19,13 @@
   },
   "scripts": {
     "dev": "ts-node-dev --quiet --no-deprecation src/main.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
+    "postinstall": "prisma generate"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
